package com.poo;

import com.j256.ormlite.table.DatabaseTable;
import com.j256.ormlite.field.DatabaseField;

@DatabaseTable(tableName = "Clientes")
public class Cliente extends Usuario{
    @DatabaseField(foreign = true, foreignAutoRefresh = true)
    private Prontuario prontuario;
    
    @DatabaseField
    private String aniverssario;
    
    public Cliente(){
        super();
    }
    
    public Cliente(String nome, String CPF, int id, Prontuario prontuario, String aniverssario){
        super(nome, CPF, id);

        if (!ValidadorUtils.isCpfValido(CPF)) {
            throw new IllegalArgumentException("Não foi possível criar o Cliente: O CPF informado é inválido.");
        }
        if (!ValidadorUtils.isDataValida(aniverssario)) {
            throw new IllegalArgumentException("Não foi possível criar o Cliente: A data de aniversário informada é inválida.");
        }
        if (prontuario == null) {
            throw new IllegalArgumentException("Não foi possível criar o Cliente: o prontuário não pode ser nulo neste construtor (use o construtor sem prontuário para o cadastro).");
        }

        this.prontuario = prontuario;
        this.aniverssario = aniverssario;
    }
    
    /**
     * Construtor sem Prontuario — usado no cadastro de Cliente, já que o
     * prontuário agora é criado/vinculado posteriormente em uma tela
     * dedicada de Atualizar Prontuário, e não mais no momento do cadastro.
     */
    public Cliente(String nome, String CPF, String aniverssario){
        super(nome, CPF, 0);

        if (!ValidadorUtils.isCpfValido(CPF)) {
            throw new IllegalArgumentException("Não foi possível criar o Cliente: O CPF informado é inválido.");
        }
        if (!ValidadorUtils.isDataValida(aniverssario)) {
            throw new IllegalArgumentException("Não foi possível criar o Cliente: A data de aniversário informada é inválida.");
        }

        this.prontuario = null;
        this.aniverssario = aniverssario;
    }
    
    public Prontuario getProntuario(){
        return this.prontuario;
    }
    
    public void setProntuario(Prontuario prontuario){
        this.prontuario = prontuario;
    }
    
    public String getAniverssario(){
        return this.aniverssario;
    }
    
}